--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,5 +14,8 @@
       <li><%= link_to "Home", root_path %></li>
       <li><%= link_to "About", about_path %></li>
     </ul>
+    <ul class="nav navbar-nav">
+      <li><%= link_to "Login", "#" %></li>
+    </ul>
   </div><!-- /.navbar-collapse -->
 </nav>
