added user model, added name

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,10 @@
     <%= content_tag(:div, msg, class: "alert alert-#{name}") %>
   <% end %>
 
-  <%= yield %>
+  <div class="container">
+    <%= yield %>
+  </div>
+
 
   <%= render 'layouts/footer' %>
 
