--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,21 +1,17 @@
-<nav class="navbar navbar-default" role="navigation">
-  <div class="navbar-header">
-    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
-      <span class="sr-only">Toggle navigation</span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-    </button>
-    <a class="navbar-brand" href="#">OMRails</a>
-  </div>
-
-  <div class="collapse navbar-collapse navbar-ex1-collapse">
-    <ul class="nav navbar-nav">
+<div class="navbar">
+  <div class="navbar-inner">
+    <%= link_to "OMRails", root_path, class: 'brand' %>
+    <ul class="nav">
       <li><%= link_to "Home", root_path %></li>
       <li><%= link_to "About", about_path %></li>
     </ul>
-    <ul class="nav navbar-nav">
-      <li><%= link_to "Login", "#" %></li>
+    <ul class="nav navbar-nav pull-right">
+      <% if user_signed_in? %>
+        <li><%= link_to "My raiProfile", edit_user_registration_path %></li>
+        <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
+      <% else %>
+        <li><%= link_to "Login", new_user_session_path %></li>
+      <% end %>
     </ul>
-  </div><!-- /.navbar-collapse -->
-</nav>
+  </div>
+</div>
