--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -1,23 +1,19 @@
 <h1>Listing pins</h1>
 
-<table>
-  <tr>
-    <th>Description</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th>Description</th>
+      <th></th>
+    </tr>
+  </thead>
 
-<% @pins.each do |pin| %>
-  <tr>
-    <td><%= pin.description %></td>
-    <td><%= link_to 'Show', pin %></td>
-    <td><%= link_to 'Edit', edit_pin_path(pin) %></td>
-    <td><%= link_to 'Destroy', pin, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-<% end %>
+
+  <tbody>
+    <%= render @pins %>
+  </tbody>
 </table>
 
 <br />
 
-<%= link_to 'New Pin', new_pin_path %>
+<%= link_to 'New Pin', new_pin_path, class: 'btn btn-success' %>
