--- a/app/views/pins/show.html.erb
+++ b/app/views/pins/show.html.erb
@@ -1,10 +1,16 @@
-<p id="notice"><%= notice %></p>
+<div class="row">
+  <div class="span6 offset3">
+    <div class="well">
+      <p>
+        <%= @pin.description %>
+      </p>
+      <%= link_to 'Edit', edit_pin_path(@pin) %> |
+      <%= link_to 'Back', pins_path %>
+    </div>
+  </div>
 
-<p>
-  <b>Description:</b>
-  <%= @pin.description %>
-</p>
+</div>
 
 
-<%= link_to 'Edit', edit_pin_path(@pin) %> |
-<%= link_to 'Back', pins_path %>
+
+
