--- a/app/views/pins/show.html.erb
+++ b/app/views/pins/show.html.erb
@@ -3,9 +3,12 @@
     <div class="well">
       <p>
         <%= @pin.description %>
+        <%= @pin.user.name %>
       </p>
-      <%= link_to 'Edit', edit_pin_path(@pin) %> |
-      <%= link_to 'Back', pins_path %>
+      <% if current_user == @pin.user %>
+        <%= link_to 'Edit', edit_pin_path(@pin) %> |
+      <% end %>
+        <%= link_to 'Back', pins_path %>
     </div>
   </div>
 
