Added AWS S3 uploading for paperclip

--- a/app/assets/stylesheets/app.css.scss
+++ b/app/assets/stylesheets/app.css.scss
@@ -1,1 +1,19 @@
 @import "bootstrap";
+
+// Masonry!
+// -------------------------
+
+.item {
+  font-size: 1em;
+  line-height: 1.45em;
+  float: left;
+  margin: 5px;
+}
+
+br {
+  clear: both;
+}
+
+.add-new {
+  clear: both;
+}
