--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -1,20 +1,9 @@
 <h1>Listing pins</h1>
 
-<table class="table table-striped">
-  <thead>
-    <tr>
-      <th>Image</th>
-      <th>Description</th>
-      <th></th>
-    </tr>
-  </thead>
-
-
-  <tbody>
-    <%= render @pins %>
-  </tbody>
-</table>
+<div id="pins">
+  <%= render @pins %>
+</div>
 
 <br />
 
-<%= link_to 'New Pin', new_pin_path, class: 'btn btn-success' %>
+<%= link_to 'New Pin', new_pin_path, class: 'btn btn-success add-new' %>
