--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,7 +7,8 @@
     </ul>
     <ul class="nav navbar-nav pull-right">
       <% if user_signed_in? %>
-        <li><%= link_to "My raiProfile", edit_user_registration_path %></li>
+        <li><%= link_to "+ Add", new_pin_path %></li>
+        <li><%= link_to "My Profile", edit_user_registration_path %></li>
         <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
       <% else %>
         <li><%= link_to "Login", new_user_session_path %></li>
