Added image uploading via url

--- a/app/views/pins/_form.html.erb
+++ b/app/views/pins/_form.html.erb
@@ -5,6 +5,7 @@
 
   <div class="form-inputs">
     <%= f.input :image, label: "Upload an image" %>
+    <%= f.input :image_remote_url, label: "or enter a URL" %>
     <%= f.input :description, as: :text, input_html: { rows: 3 } %>
   </div>
 
